--- a/design/cardesign/css/style.css
+++ b/design/cardesign/css/style.css
@@ -3457,7 +3457,7 @@ input[type="button"].btn-block {
   display: inline-block;
   padding-top: 0.3125rem;
   padding-bottom: 0.3125rem;
-  margin-right: 1rem;
+  margin-right: 39rem;
   font-size: 1.25rem;
   line-height: inherit;
   white-space: nowrap; }
@@ -3472,7 +3472,7 @@ input[type="button"].btn-block {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  padding-left: 0;
+  padding-left: -10%;
   margin-bottom: 0;
   list-style: none; }
   .navbar-nav .nav-link {
@@ -8167,7 +8167,7 @@ h1, h2, h3, h4, h5,
 .ftco-navbar-light {
   background: transparent !important;
   position: absolute;
-  top: 20px;
+  top: 17px;
   left: 0;
   right: 0;
   z-index: 3; }
@@ -8187,11 +8187,11 @@ h1, h2, h3, h4, h5,
     .ftco-navbar-light .navbar-nav {
       padding-bottom: 10px; } }
   .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
-    font-size: 15px;
+    font-size: 13px;
     padding-top: .9rem;
     padding-bottom: .9rem;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
     color: #fff;
     font-weight: 400;
     opacity: 1 !important; }
