car.html navigation

--- a/design/indexstyle.css
+++ b/design/indexstyle.css
@@ -618,8 +618,7 @@ h5 {
     margin-right: 250px;
 }
 
-/* ------feedback---- */
-
+/* ------feedback and car---- */
 .sub-header-feedback {
     height: 50vh;
     width: 100%;
@@ -632,6 +631,24 @@ h5 {
 }
 
 .sub-header-feedback h1 {
+    color: #fff;
+    text-align: center;
+    margin-top: 100px;
+}
+
+/* ------car---- */
+.sub-sub-header-cars {
+    height: 50vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
+        url(images/image_3.jpg);
+    background-position: top;
+    background-size: cover;
+    text-align: center;
+    color: #fff;
+}
+
+.sub-sub-header-cars h1 {
     color: #fff;
     text-align: center;
     margin-top: 100px;
